              s = struct { "public" = value };

9. modules/json-module.c: Malformed UTF-8 was not being properly
   handled by the json-encoder.
10. modules/csv-module.c: The decode_csv_row function was ignoring the
    delimiter setting after a quoted string.
11. src/slparse.c: A for statement lacking a conditional expression
    was not being properly handled (noticed by rocket penguin).

{{{ Previous Versions

Changes since 2.3.1
a. Some tests were failing when compiled with a compiler that defaults
   to using `unsigned char'.  In the few places where a `signed char'
   was assumed, `char' was changed to `signed char'.  Also, a
   copy-paste error was corrected in the src/test/sltest.c that caused
   the test program to fail on big-endian 64 bit systems.

Changes since 2.3.0
1. modules/json-module.c: Fix a possible uninitialized variable error.
2. Define _BSD_SOURCE the few places necessary to get prototypes for
   strtoll and BSD specific network struct fields.
3. src/slstd.c: define _SVID_SOURCE to get prototype for putenv
4. modules/Makefile.in: On cygwin, the libraries must be placed last
   for module compilation (Marco Atzeri).
5. src/slstrops.c: The return value from pop_lut was not being
   checked leading to a segv upon faiure (reported by Morten Bo
   Johansen).
6. slsh/lib/slshrl.sl: Floating point literals with a leading '.' were
   not being properly handled by slsh_interactive_massage_hook
   (Manfred Hanke).
7. src/slarrfun.c: Added wherefirst/last_eq/ne/gt/lt/ge/le functions,
   which are much faster than using just wherefirst or wherefast with
   the implied binary comparison.  For example:

     slsh> .load rand
     slsh> x = rand_uniform (100000);
     slsh> tic; loop (1000) i=wherefirst(x>=0.999); toc; i;
     0.597183
     268
     slsh> tic; loop (1000) i=wherefirst_ge(x,0.999); toc; i;
     0.0024419999999999997
     268

   For this case, the speedup about 0.60/0.0024 = 250.
8. Rebuilt text documentation for change #7.